--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,10 @@ jobs:
       - name: Run main
         run: python ${{ github.workspace }}/main.py
 
-                               
       - name: 提交更改
         run: |
           git config --local user.email "mlyuanlang@126.com"
           git config --local user.name "mlvjfchen"
           git add .
           git commit *.txt -m "Add generated file"
-          git push -f
+          git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
