--- a/.github/workflows/sx.yml
+++ b/.github/workflows/sx.yml
@@ -1,8 +1,8 @@
-name: Run sx.py daily
+name: Run sx.py daily to filter IPTV streams
 
 on:
   schedule:
-    # 每天在上海时间的 8:00 和 20:00 运行，即 UTC 时间的 0:00 和 12:00
+    # 每天在上海时间 8:00 和 20:00 运行，即 UTC 时间的 0:00 和 12:00
     - cron: '0 0,12 * * *'  # 0 0,12 表示 UTC 时间的 0:00 和 12:00
   workflow_dispatch:  # 允许手动触发
 
@@ -19,33 +19,33 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Remove old 888.txt if exists
+      - name: Remove old filtered_streams.txt if exists
         run: |
-          if [ -f 888.txt ]; then
-            rm 888.txt
-            echo "Old 888.txt removed."
+          if [ -f filtered_streams.txt ]; then
+            rm filtered_streams.txt
+            echo "Old filtered_streams.txt removed."
           else
-            echo "No old 888.txt file to remove."
+            echo "No old filtered_streams.txt file to remove."
           fi
 
-      - name: Run sx.py script
+      - name: Run sx.py script to filter streams
         run: |
           echo "Running sx.py script..."
           python sx.py
 
-      - name: Check if 888.txt was generated
+      - name: Check if filtered_streams.txt was generated
         run: |
-          if [ -f 888.txt ]; then
-            echo "888.txt generated successfully."
+          if [ -f filtered_streams.txt ]; then
+            echo "filtered_streams.txt generated successfully."
           else
-            echo "888.txt was not generated."
+            echo "filtered_streams.txt was not generated."
             exit 1
           fi
 
-      - name: Commit and push changes if 888.txt exists
+      - name: Commit and push changes if filtered_streams.txt exists
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add 888.txt
-          git commit -m 'Generate 888.txt from sx.py' || echo "No changes to commit"
+          git add filtered_streams.txt
+          git commit -m 'Update filtered IPTV streams' || echo "No changes to commit"
           git push
