--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: 提交更改
         run: |
-          git config --local user.email "mlyuanlang@126.com"
+          git config --local user.email "ml87878@126.com"
           git config --local user.name "mlvjfchen"
           git add .
           git commit *.txt -m "Add generated file"
