--- a/.github/workflows/test_nodes.yml
+++ b/.github/workflows/test_nodes.yml
@@ -19,13 +19,13 @@ jobs:
           sudo apt install -y jq
           pip install requests pyyaml httpx
 
-      - name: Download mihomo (Clash.Meta)
-        run: |
-          version=1.19.4
-          curl -Lo mihomo.gz "https://github.com/MetaCubeX/mihomo/releases/download/v${version}/mihomo-linux-amd64-v${version}.gz"
-          gunzip mihomo.gz
-          mv mihomo-linux-amd64-v${version} clash-meta
-          chmod +x clash-meta
+- name: Download mihomo (Clash.Meta)
+  run: |
+    version=1.19.4
+    curl -Lo mihomo.gz "https://github.com/MetaCubeX/mihomo/releases/download/v${version}/mihomo-linux-amd64-v${version}.gz"
+    gunzip -c mihomo.gz > clash-meta
+    chmod +x clash-meta
+
 
       - name: Run sub.py to test and filter nodes
         run: |
