--- a/.github/workflows/node-speed-test.yml
+++ b/.github/workflows/node-speed-test.yml
@@ -1,16 +1,19 @@
-name: Node Checker
+name: Enhanced Node Checker
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # 每6小时运行一次
+    - cron: '0 */3 * * *'  # 每3小时运行一次
   workflow_dispatch:
 
 jobs:
   check:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -22,15 +25,18 @@ jobs:
         python -m pip install --upgrade pip
         pip install requests pyyaml
     
-    - name: Run checker
+    - name: Run enhanced checker
       run: python sub.py
+      env:
+        DEBUG: 'True'  # 启用调试模式
     
     - name: Commit changes
+      if: always()
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
         git add nodes.yml speed.txt
-        git commit -m "Auto update node list and speed results"
+        git diff-index --quiet HEAD || git commit -m "Auto update: $(date +'%Y-%m-%d %H:%M')"
     
     - name: Push changes
       uses: ad-m/github-push-action@master
