--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
-requests
-pyyaml
+# requirements.txt
+requests==2.31.0
+pyyaml==6.0.1
+shadowsocks==2.8.2
+v2ray-core @ https://github.com/2dust/v2ray-core/releases/download/v4.45.2/v2ray-core-4.45.2-py3-none-any.whl
