--- a/.github/workflows/node-speed-test.yml
+++ b/.github/workflows/node-speed-test.yml
@@ -1,32 +1,44 @@
-name: Proxy Checker
+name: Node Validator
 
 on:
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: '0 */6 * * *'  # 每6小时运行
   workflow_dispatch:
 
 jobs:
-  check:
+  validate:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 45
     steps:
-    - uses: actions/checkout@v4
-    
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Install system tools
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          curl \
+          netcat-openbsd \
+          python3 \
+          python3-pip
+
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-    
+
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests pyyaml
-    
-    - name: Run checker
-      run: python sub.py
-    
-    - name: Commit & Push
-      uses: ad-m/github-push-action@master
+      run: pip install pyyaml
+
+    - name: Run validation
+      run: python3 sub.py
+      env:
+        DEBUG: 'true'
+
+    - name: Commit results
+      uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: main
+        commit_message: "自动更新节点列表"
+        file_pattern: |
+          nodes.yml
+          speed.txt
