--- a/.github/workflows/node-speed-test.yml
+++ b/.github/workflows/node-speed-test.yml
@@ -1,4 +1,4 @@
-name: Advanced Proxy Check
+name: Proxy Checker Pro
 
 on:
   schedule:
@@ -18,23 +18,45 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y \
           curl \
-          netcat-openbsd \
+          jq \
+          unzip \
           python3 \
-          python3-pip \
-          unzip
-        
-        # 安装 Hysteria
-        HYSTERIA_VER=$(curl -s https://api.github.com/repos/apernet/hysteria/releases/latest | grep 'tag_name' | cut -d '"' -f 4)
-        wget https://github.com/apernet/hysteria/releases/download/$HYSTERIA_VER/hysteria-linux-amd64
-        sudo install -m 755 hysteria-linux-amd64 /usr/local/bin/hysteria
-        
-        # 安装 Xray-core
-        XRAY_VER=$(curl -s https://api.github.com/repos/XTLS/Xray-core/releases/latest | grep 'tag_name' | cut -d '"' -f 4)
-        wget https://github.com/XTLS/Xray-core/releases/download/$XRAY_VER/Xray-linux-64.zip
-        unzip Xray-linux-64.zip
-        sudo install -m 755 xray /usr/local/bin/
+          python3-pip
 
-    - name: Install dependencies
+    - name: Install Hysteria2
+      run: |
+        # 使用官方安装脚本
+        bash <(curl -fsSL https://get.hy2.sh/)
+
+    - name: Install Xray-core
+      run: |
+        # 获取最新版本号
+        LATEST_VERSION=$(curl -s "https://api.github.com/repos/XTLS/Xray-core/releases/latest" | jq -r .tag_name)
+        
+        # 清理旧文件
+        sudo rm -rf /usr/local/bin/xray* /tmp/xray
+        
+        # 下载并解压
+        curl -fL -o /tmp/xray.zip \
+          "https://github.com/XTLS/Xray-core/releases/download/$LATEST_VERSION/Xray-linux-64.zip"
+        
+        # 验证文件完整性
+        if [ $(stat -c%s /tmp/xray.zip) -lt 1000000 ]; then
+          echo "文件下载不完整！"
+          exit 1
+        fi
+        
+        # 强制解压到临时目录
+        mkdir -p /tmp/xray
+        unzip -o -d /tmp/xray /tmp/xray.zip
+        
+        # 安装二进制文件
+        sudo install -m 755 /tmp/xray/xray /usr/local/bin/
+        
+        # 验证安装
+        xray version
+
+    - name: Install Python dependencies
       run: pip install pyyaml
 
     - name: Run checker
