--- a/.github/workflows/node-speed-test.yml
+++ b/.github/workflows/node-speed-test.yml
@@ -1,8 +1,8 @@
-name: Proxy Checker Pro
+name: Advanced Proxy Checker
 
 on:
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: '0 */6 * * *'  # 每6小时运行一次
   workflow_dispatch:
 
 jobs:
@@ -10,10 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
-    - name: Setup environment
+    - name: Setup system dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y \
@@ -21,39 +23,62 @@ jobs:
           jq \
           unzip \
           python3 \
-          python3-pip
+          python3-pip \
+          netcat-openbsd \
+          openssl
 
     - name: Install Hysteria2
-      run: bash <(curl -fsSL https://get.hy2.sh/)
+      run: |
+        sudo bash <(curl -fsSL https://get.hy2.sh/)
+        hysteria version
 
     - name: Install Xray-core
       run: |
-        LATEST_VERSION=$(curl -s "https://api.github.com/repos/XTLS/Xray-core/releases/latest" | jq -r .tag_name)
-        sudo rm -rf /usr/local/bin/xray* /tmp/xray
+        # 清理旧版本
+        sudo rm -rf /usr/local/bin/xray /tmp/xray*
+
+        # 获取最新版本
+        XRAY_VER=$(curl -s "https://api.github.com/repos/XTLS/Xray-core/releases/latest" | jq -r '.tag_name')
+        echo "Installing Xray-core $XRAY_VER"
+
+        # 下载并安装
         curl -fL -o /tmp/xray.zip \
-          "https://github.com/XTLS/Xray-core/releases/download/$LATEST_VERSION/Xray-linux-64.zip"
-        mkdir -p /tmp/xray
-        unzip -o -d /tmp/xray /tmp/xray.zip
-        sudo install -m 755 /tmp/xray/xray /usr/local/bin/
+          "https://github.com/XTLS/Xray-core/releases/download/$XRAY_VER/Xray-linux-64.zip"
+        
+        # 强制解压并安装
+        sudo unzip -o /tmp/xray.zip -d /usr/local/bin/
+        sudo chmod +x /usr/local/bin/xray
         xray version
 
-    - name: Install Python dependencies
-      run: pip install pyyaml
+    - name: Setup Python environment
+      run: |
+        python3 -m pip install --upgrade pip
+        pip install pyyaml
 
-    - name: Run checker
+    - name: Run proxy checker
       run: python3 sub.py
       env:
         DEBUG: 'true'
+        TIMEOUT: '20'
 
-    - name: Auto commit
+    - name: Upload results
+      uses: actions/upload-artifact@v4
+      with:
+        name: proxy-results
+        path: |
+          nodes.yml
+          speed.txt
+        retention-days: 3
+
+    - name: Commit changes
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        commit_message: "Auto update proxy list"
+        commit_message: "Auto update proxy list - $(date +'%Y-%m-%d %H:%M')"
         file_pattern: |
           nodes.yml
           speed.txt
         skip_fetch: true
         skip_dirty_check: true
-        allow_empty_commit: true
         commit_user_name: "GitHub Actions"
         commit_user_email: "actions@github.com"
+        allow_empty_commit: true
