--- a/.github/workflows/node-speed-test.yml
+++ b/.github/workflows/node-speed-test.yml
@@ -1,4 +1,4 @@
-name: Advanced Proxy Checker
+name: Proxy Checker Ultimate
 
 on:
   schedule:
@@ -10,12 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
 
-    - name: Setup system dependencies
+    - name: Setup system tools
       run: |
         sudo apt-get update
         sudo apt-get install -y \
@@ -27,35 +25,36 @@ jobs:
           netcat-openbsd \
           openssl
 
-    - name: Install Hysteria2
+    - name: Install Hysteria2 (Stable)
       run: |
-        sudo bash <(curl -fsSL https://get.hy2.sh/)
+        # 下载官方编译好的二进制文件
+        HYSTERIA_VER=$(curl -s "https://api.github.com/repos/apernet/hysteria/releases/latest" | jq -r '.tag_name')
+        sudo curl -fL -o /usr/local/bin/hysteria \
+          "https://github.com/apernet/hysteria/releases/download/$HYSTERIA_VER/hysteria-linux-amd64"
+        sudo chmod +x /usr/local/bin/hysteria
         hysteria version
 
-    - name: Install Xray-core
+    - name: Install Xray-core (Stable)
       run: |
         # 清理旧版本
-        sudo rm -rf /usr/local/bin/xray /tmp/xray*
-
-        # 获取最新版本
+        sudo rm -f /usr/local/bin/xray /tmp/xray*
+        
+        # 获取最新版
         XRAY_VER=$(curl -s "https://api.github.com/repos/XTLS/Xray-core/releases/latest" | jq -r '.tag_name')
         echo "Installing Xray-core $XRAY_VER"
-
-        # 下载并安装
-        curl -fL -o /tmp/xray.zip \
-          "https://github.com/XTLS/Xray-core/releases/download/$XRAY_VER/Xray-linux-64.zip"
         
-        # 强制解压并安装
-        sudo unzip -o /tmp/xray.zip -d /usr/local/bin/
+        # 下载并安装
+        sudo curl -fL -o /usr/local/bin/xray \
+          "https://github.com/XTLS/Xray-core/releases/download/$XRAY_VER/Xray-linux-64"
         sudo chmod +x /usr/local/bin/xray
         xray version
 
-    - name: Setup Python environment
+    - name: Setup Python
       run: |
         python3 -m pip install --upgrade pip
         pip install pyyaml
 
-    - name: Run proxy checker
+    - name: Run checker
       run: python3 sub.py
       env:
         DEBUG: 'true'
@@ -68,17 +67,13 @@ jobs:
         path: |
           nodes.yml
           speed.txt
-        retention-days: 3
 
-    - name: Commit changes
+    - name: Auto commit
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        commit_message: "Auto update proxy list - $(date +'%Y-%m-%d %H:%M')"
+        commit_message: "Auto update: $(date +'%Y-%m-%d %H:%M')"
         file_pattern: |
           nodes.yml
           speed.txt
         skip_fetch: true
-        skip_dirty_check: true
-        commit_user_name: "GitHub Actions"
-        commit_user_email: "actions@github.com"
         allow_empty_commit: true
