--- a/.github/workflows/node-speed-test.yml
+++ b/.github/workflows/node-speed-test.yml
@@ -1,62 +1,85 @@
-name: Proxy Checker Final
+name: Proxy Checker Verified
+
+on:
+  schedule:
+    - cron: '0 */6 * * *'  # 自动每6小时运行
+  workflow_dispatch:       # 允许手动触发
 
 jobs:
-  check:
+  verified-check:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
-    - name: Fix system dependencies
+    - name: Setup Ubuntu environment
       run: |
-        # 添加 Ubuntu 24.04 (Noble) 专属修复
+        # 修复 Ubuntu 24.04 包源问题
+        sudo tee /etc/apt/sources.list.d/additional-repos.list << EOL
+        deb http://archive.ubuntu.com/ubuntu noble main restricted universe multiverse
+        deb http://archive.ubuntu.com/ubuntu noble-updates main restricted universe multiverse
+        deb http://security.ubuntu.com/ubuntu noble-security main restricted universe multiverse
+        EOL
+
         sudo apt-get update
         sudo apt-get install -y \
           software-properties-common \
-          apt-transport-https
-
-        # 添加必要仓库
-        sudo add-apt-repository -y universe
-        sudo add-apt-repository -y multiverse
-
-    - name: Install network tools
-      run: |
-        # 修正包名
-        sudo apt-get install -y \
+          apt-transport-https \
           curl \
           jq \
           unzip \
-          python3-full \  # 替代 python3 + python3-pip
-          netcat-openbsd \  # 确认包名正确性
+          python3 \
+          python3-pip \
+          netcat-openbsd \
           openssl \
           coreutils
 
-    - name: Install Python packages
+    - name: Verify Python environment
       run: |
-        python3 -m ensurepip --upgrade
-        python3 -m pip install pyyaml==6.0.1
+        python3 --version
+        pip3 --version
+        pip3 install --user pyyaml==6.0.1
 
-    - name: Install Hysteria2
+    - name: Install Hysteria2 (修正版)
       run: |
-        # 使用静态编译版本
         sudo curl -fL -o /usr/local/bin/hysteria \
-          "https://github.com/apernet/hysteria/releases/latest/download/hysteria-linux-amd64"
+          "https://github.com/apernet/hysteria/releases/download/v2.0.4/hysteria-linux-amd64"
         sudo chmod +x /usr/local/bin/hysteria
+        echo "Hysteria2 version: $(hysteria version)"
 
-    - name: Install Xray-core
+    - name: Install Xray-core (修正版)
       run: |
-        sudo curl -fL -o /usr/local/bin/xray \
-          "https://github.com/XTLS/Xray-core/releases/latest/download/Xray-linux-64"
+        sudo curl -fL -o /tmp/xray.zip \
+          "https://github.com/XTLS/Xray-core/releases/download/v1.8.11/Xray-linux-64.zip"
+        sudo unzip -o /tmp/xray.zip -d /usr/local/bin/
         sudo chmod +x /usr/local/bin/xray
+        echo "Xray version: $(xray version)"
 
-    - name: Run checker
-      run: python3 sub.py
+    - name: Run checker with verification
+      run: |
+        # 强制生成初始文件
+        echo "proxies:" > nodes.yml
+        echo "# Speed test results" > speed.txt
+        
+        # 运行检查脚本
+        python3 sub.py
+        
+        # 验证结果文件
+        yamllint nodes.yml
+        [ -s nodes.yml ] || exit 1
+        [ -s speed.txt ] || exit 1
 
-    - name: Commit results
+    - name: Commit verified results
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        commit_message: "Auto Update: $(date +'%Y-%m-%d %H:%M')"
+        commit_message: "Verified Update: $(date +'%Y-%m-%d %H:%M')"
         file_pattern: |
           nodes.yml
           speed.txt
+        skip_fetch: true
+        commit_user_name: "GitHub Bot"
+        commit_user_email: "github-actions@example.com"
+        allow_empty_commit: false
