--- a/.github/workflows/node-speed-test.yml
+++ b/.github/workflows/node-speed-test.yml
@@ -47,21 +47,40 @@ jobs:
       run: |
         HYSTERIA_VERSION="v2.6.1"  # 请确认最新版本，访问 https://github.com/apernet/hysteria/releases
         HYSTERIA_URL="https://github.com/apernet/hysteria/releases/download/app%2Fv2.6.1/hysteria-linux-amd64"
-        echo "Downloading Hysteria2 from ${HYSTERIA_URL}"
+        echo "正在下载 Hysteria2: ${HYSTERIA_URL}"
         if ! sudo curl -fL -o /usr/local/bin/hysteria "${HYSTERIA_URL}"; then
-          echo "Error: Failed to download Hysteria2. Please check the version and URL."
+          echo "错误：无法下载 Hysteria2，请检查版本和链接。"
           exit 1
         fi
         sudo chmod +x /usr/local/bin/hysteria
-        echo "Hysteria2 version: $(hysteria version || echo 'Version check failed')"
+        echo "Hysteria2 版本: $(hysteria version || echo '版本检查失败')"
 
     - name: Install Xray-core
       run: |
-        sudo curl -fL -o /tmp/xray.zip \
-          "https://github.com/XTLS/Xray-core/releases/download/v1.8.11/Xray-linux-64.zip"
-        sudo unzip -o /tmp/xray.zip -d /usr/local/bin/
-        sudo chmod +x /usr/local/bin/xray
-        echo "Xray version: $(xray version)"
+        XRAY_VERSION="v25.3.6"  # 已更新为最新版本
+        XRAY_URL="https://github.com/XTLS/Xray-core/releases/download/${XRAY_VERSION}/Xray-linux-64.zip"
+        echo "正在下载 Xray-core: ${XRAY_URL}"
+        # 尝试下载，最多重试3次
+        for i in {1..3}; do
+          if sudo curl -fL -o /tmp/xray.zip "${XRAY_URL}"; then
+            break
+          else
+            echo "尝试 $i 失败，5秒后重试..."
+            sleep 5
+          fi
+        done
+        if [ ! -f /tmp/xray.zip ]; then
+          echo "错误：无法下载 Xray-core，尝试使用官方安装脚本。"
+          bash -c "$(curl -L https://github.com/XTLS/Xray-install/raw/main/install-release.sh)" @ install
+          if [ ! -f /usr/local/bin/xray ]; then
+            echo "错误：安装脚本无法安装 Xray-core。"
+            exit 1
+          fi
+        else
+          sudo unzip -o /tmp/xray.zip -d /usr/local/bin/
+          sudo chmod +x /usr/local/bin/xray
+        fi
+        echo "Xray 版本: $(xray version || echo '版本检查失败')"
 
     - name: Run checker with verification
       run: |
@@ -73,9 +92,9 @@ jobs:
         python3 sub.py
         
         # 验证结果文件
-        yamllint nodes.yml || echo "Warning: YAML lint failed"
-        [ -s nodes.yml ] || echo "Warning: nodes.yml is empty"
-        [ -s speed.txt ] || echo "Warning: speed.txt is empty"
+        yamllint nodes.yml || echo "警告：YAML 格式检查失败"
+        [ -s nodes.yml ] || echo "警告：nodes.yml 文件为空"
+        [ -s speed.txt ] || echo "警告：speed.txt 文件为空"
 
     - name: Commit verified results
       uses: stefanzweifel/git-auto-commit-action@v4
